feat: Remove unused controllers and address rate limits (master)
This commit removes the unused DisponibilidadController,
EscenarioController, and ReservaController.

Additionally, it addresses the rate limit issue with the
Gemini API by removing the NotificationService and related
functionality, as it was causing excessive API calls.