@@ -1,5 +1,11 @@
 package edu.usco.campusbookings.application.service;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import edu.usco.campusbookings.application.dto.request.DisponibilidadRequest;
 import edu.usco.campusbookings.application.dto.response.DisponibilidadResponse;
 import edu.usco.campusbookings.application.port.input.DisponibilidadUseCase;
@@ -7,12 +13,6 @@ import edu.usco.campusbookings.application.port.output.EscenarioRepositoryPort;
 import edu.usco.campusbookings.application.port.output.ReservaRepositoryPort;
 import edu.usco.campusbookings.domain.model.Escenario;
 import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,19 +24,11 @@ public class DisponibilidadService implements DisponibilidadUseCase {
     @Override
     @Transactional(readOnly = true)
     public List<DisponibilidadResponse> consultarDisponibilidad(DisponibilidadRequest request) {
-        // Obtener todos los escenarios que coincidan con los filtros
-        List<Escenario> escenarios = escenarioRepositoryPort.findAll();
-        
-        if (request.getTipo() != null) {
-            escenarios = escenarios.stream()
-                    .filter(e -> e.getTipo().equalsIgnoreCase(request.getTipo()))
-                    .collect(Collectors.toList());
-        }
-        
-        if (request.getUbicacion() != null) {
-            escenarios = escenarios.stream()
-                    .filter(e -> e.getUbicacion().equalsIgnoreCase(request.getUbicacion()))
-                    .collect(Collectors.toList());
+        // Filtrar escenarios
+        List<Escenario> escenarios = escenarioRepositoryPort.findByTipoOrNombreOrUbicacion(request.getTipo(), request.getNombre(), request.getUbicacion());
+
+        if (escenarios.isEmpty()) {
+            return List.of();
         }
 
         // Verificar disponibilidad de cada escenario
@@ -56,6 +48,6 @@ public class DisponibilidadService implements DisponibilidadUseCase {
                             .disponible(disponible)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
